# kafka-python

./: .env  .pre-commit-config.yaml  README.md  admin.py  docker-compose-1-node.yaml  docker-compose-3-nodes.yaml  docker-compose.yaml  producer.py  pyproject.toml  utils.py
schemas/: schema.avsc  schema.json
src/: admin.py  avro_consumer.py  avro_producer.py  consumer.py  json_producer.py  json_producer_schema_serializer.py  logging_config.py  producer.py  schema_registry_client.py  utils.py
