[tool.poetry]
name = "kafka-with-python"
version = "0.1.0"
description = "Learning Kafka With python"
authors = ["Sumanshu Nankana <sumanshunankana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.3.0"
python-dotenv = "^1.0.1"
jsonschema = "^4.21.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
